feat(lineage): extend lineage_edges BFS to job & dataset lineage (V109)
Generalize the pre-materialized lineage_edges adjacency + BFS read path from
run/dataset-version lineage to ALL node types (job, dataset, and the version
nodes), so every lineage query type can be served by indexed batch lookups
instead of a per-request recursive CTE.

Migration V109:
- relax run_uuid to NULL (job edges have no run)
- back-fill current job<->dataset edges from job_versions_io_mapping:
  input  -> dataset --CONSUMES--> job
  output -> job    --PRODUCES--> dataset
  partitioned identically (RANGE run_date -> HASH namespace) for the same
  per-tenant isolation + retention; run_date = job version made_current_at.

Write path (DenormalizedLineageService.populateLineageEdgesForRun): also emit
the job<->dataset edges for the run's job (run_uuid NULL, namespace =
runs.namespace_name) so the adjacency stays current as runs land.

Read path (LineageService, behind MARQUEZ_LINEAGE_USE_EDGE_BFS, default OFF):
- traverseJobLineageEdges: BFS over job<->dataset edges; a hop expands
  job -> its datasets (PRODUCES targets + CONSUMES sources) -> all jobs
  touching them (producers + consumers) — reproducing the recursive CTE's
  "two jobs share ANY dataset" adjacency. Reuses the run-path edge queries
  (node-id spaces are disjoint).
- route both the V1 (lineageImpl) and V2 (lineageV2) job/dataset paths through
  the traversal, hydrating the visited set at depth 0 so the emitted graph
  matches the CTE path.

Tests: add testJobLineage_edgeBfs_matchesRecursiveCte (parity vs recursive CTE
at depths 1/2/5), mirroring the run-lineage parity test.

Validated on local PG16 (real Flyway schema, 129 migrations): V109 applies
cleanly, run_uuid nullable, partitioning + 5-col PK intact; seeded job graph
1-hop BFS from J2 returns {J1,J2,J3} (share-any-dataset); write-path job edge
SQL EXPLAIN-validated against the live schema.

Signed-off-by: swaroopduthks <swaroopduthks@gmail.com>